Prevent horizontal scroll when palette name cannot wrap

--- a/editor/sass/palette.scss
+++ b/editor/sass/palette.scss
@@ -91,6 +91,7 @@
     padding: 9px;
     font-weight: bold;
     padding-left: 30px;
+    overflow: hidden;
 }
 .palette-header > i {
     position: absolute;
